--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
     <nav id="navScroll" class="navbar navbar-expand-lg navbar-light fixed-top" tabindex="0">
   <div class="container">
-    <a class="navbar-brand pe-4 fs-4" href="/">
+    <a class="navbar-brand pe-4 fs-4" href="#">
       <svg id="_圖層_1" data-name="圖層 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 340.16 340.16">
         <line y1="174.75" x2="340.16" y2="174.75" style="fill: none; stroke: #000; stroke-miterlimit: 10;"/>
         <line x1="176.1" y1="340.16" x2="176.1" y2="0" style="fill: none; stroke: #000; stroke-miterlimit: 10;"/>
