--- a/index.html
+++ b/index.html
@@ -90,6 +90,11 @@
       Gallery
     </a>
   </li>
+  <li class="nav-item">
+    <a class="nav-link text-secondary" href="#product">
+      Products
+    </a>
+  </li>
      </ul>
       <a href="" data-splitbee-event="Click Download" aria-label="Download this template" class="link-dark pb-1 link-fancy me-2">
 contact us
@@ -304,7 +309,7 @@ contact us
 </div>
 
 <div class="bg-light w-100 overflow-hidden" id="testimonials">
-  <div class="container py-vh-6">
+  <div class="container py-vh-6" id="product">
     <div class="row d-flex justify-content-center">
       <div class="col-12 col-lg-10 col-xl-8 text-center">
   <h2 class="display-6">CATEGORY</h2>
