--- a/index.html
+++ b/index.html
@@ -138,7 +138,9 @@ contact us
 </div>
 <div class="row d-flex align-items-center">
 <div class="col-md-6 col-lg-4" data-aos="fade-up" data-aos-delay="200">
-  <span class="h5 fw-lighter">01.</span>
+  <div class="d-flex justify-content-between align-items-center" style="width:100%;">
+  <div class="h5 fw-lighter">01.</div><img src="./img/gucci-logos-brands-logotypes-2.png" style="width:8vw">
+</div>
   <h3 class="py-5 border-top border-dark">雙G標誌</h3>
   <p>經典的「雙G」LOGO其實是由創辦人Guccio Gucci的兒子Aldo Gucci加入公司後，在1933年以父親Guccio Gucci名字裡的兩個大寫「G」、作為發想所設計的經典標誌。起初以顛倒相反的兩個「G」相扣而成，隨後在2015年藝術總監Alessandro Michele上任後大膽地將LOGO改為兩個正「G」重疊，為品牌開展全新的樣貌</p>
   <a href="https://www.elle.com/tw/fashion/issue/g34569957/5-gucci-logo-story/" class="link-fancy">Learn more
@@ -146,7 +148,9 @@ contact us
 </div>
 
 <div class="col-md-6 col-lg-4 py-vh-4 pb-0" data-aos="fade-up" data-aos-delay="400">
-  <span class="h5 fw-lighter">02.</span>
+  <div class="d-flex justify-content-between align-items-center" style="width:100%;">
+  <span class="h5 fw-lighter">02.</span><img src="./img/602204_92TCG_8563_001_074_0000_Light.avif"  style="width:12vw" class="pb-3">
+  </div>
   <h3 class="py-5 border-top border-dark">馬銜鍊標誌</h3>
   <p>在1930年代創立的Gucci，最初是以製作馬術用具起家，在那個以馬術運動來象徵個人階級地位的年代，馬術更是上流社會貴族相當重要的活動之一，因此許多品牌的經典符碼其實都與馬術有著密不可分的關聯性，而馬銜鍊標誌就是其中之一</p>
   <a href="https://www.elle.com/tw/fashion/issue/g34569957/5-gucci-logo-story/" class="link-fancy">Learn more
@@ -154,21 +158,27 @@ contact us
 </div>
 
 <div class="col-md-6 col-lg-4 py-vh-6 pb-0" data-aos="fade-up" data-aos-delay="600">
-  <span class="h5 fw-lighter">03.</span>
+  <div class="d-flex justify-content-between align-items-center" style="width:100%;">
+  <span class="h5 fw-lighter">03.</span><img src="./img/726755_FABKZ_9893_001_100_0000_Light.avif" style="width:10vw" class="pb-3">
+  </div>
   <h3 class="py-5 border-top border-dark">綠紅綠織帶</h3>
   <p>同樣是取自於馬術文化，被世人所熟知的Gucci「綠紅綠」Webbing織帶、靈感是來自要馬鞍固定於馬背上時，所運用的「馬腹帶」。至於為什麼是以撞色醒目的「綠紅綠」為配色？一個原因是因為當時馬具的習慣用色而決定的，另一個原因則是汲取於品牌發源地――義大利的綠白紅國旗</p>
   <a href="https://www.elle.com/tw/fashion/issue/g34569957/5-gucci-logo-story/" class="link-fancy">Learn more
   </a>
 </div>
 <div class="col-md-6 col-lg-4 py-vh-6 pb-0" data-aos="fade-up" data-aos-delay="600">
-  <span class="h5 fw-lighter">04.</span>
+  <div class="d-flex justify-content-between align-items-center" style="width:100%;">
+  <span class="h5 fw-lighter">04.</span><img src="./img/b043c790-c558-11ee-ab32-a40ff392750d.png" style="width:8vw" class="pb-3">
+  </div>
   <h3 class="py-5 border-top border-dark">竹節元素</h3>
   <p>竹節手提把的出現是在1945年第二次世界大戰後，因為原料短缺的影響讓Gucci發揮創意，決定加入日本的「竹藤」元素做替換。這樣的大膽嘗試不僅因為需要經過多道的層層關卡、將竹子加熱後一點一滴的慢慢彎成提把的形狀，讓每個包成為獨一無二的單品，融合東西方風情的創意更是讓Gucci成為首個運用竹子元素的精品品牌</p>
   <a href="https://www.elle.com/tw/fashion/issue/g34569957/5-gucci-logo-story/" class="link-fancy">Learn more
   </a>
 </div>
 <div class="col-md-6 col-lg-4 py-vh-6 pb-0" data-aos="fade-up" data-aos-delay="600">
-  <span class="h5 fw-lighter">05.</span>
+  <div class="d-flex justify-content-between align-items-center" style="width:100%;">
+  <span class="h5 fw-lighter">05.</span><img src="./img/777068_3G001_9864_002_100_0000_Light.avif" style="width:10vw" class="pb-3">
+  </div>
   <h3 class="py-5 border-top border-dark">Gucci Flora</h3>
   <p>插畫家Vittorio Accornero以義大利畫家波提且利（Botticelli）的名作《春》（Primavera）為靈感，繪製出豐富又鮮豔的大自然圖案印至於絲巾上，並將之命名為「花神」（Flora），成為當時的人氣元素之一</p>
   <a href="https://www.elle.com/tw/fashion/issue/g34569957/5-gucci-logo-story/" class="link-fancy">Learn more
