--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
                 <div class="h5 fw-lighter">01.</div>
                 <img
                   src="./img/gucci-logos-brands-logotypes-2.png"
-                  style="width: 8vw"
+                  style="width: 8vw; min-width: 150px"
                 />
               </div>
               <h3 class="py-5 border-top border-dark">雙G標誌</h3>
@@ -258,8 +258,8 @@
               >
                 <span class="h5 fw-lighter">02.</span
                 ><img
-                  src="./img/602204_92TCG_8563_001_074_0000_Light.avif"
-                  style="width: 12vw"
+                  src="./img/2.png"
+                  style="width: 12vw; min-width: 150px"
                   class="pb-3"
                 />
               </div>
@@ -285,8 +285,8 @@
               >
                 <span class="h5 fw-lighter">03.</span
                 ><img
-                  src="./img/726755_FABKZ_9893_001_100_0000_Light.avif"
-                  style="width: 10vw"
+                  src="./img/3.png"
+                  style="width: 10vw; min-width: 150px"
                   class="pb-3"
                 />
               </div>
@@ -311,8 +311,8 @@
               >
                 <span class="h5 fw-lighter">04.</span
                 ><img
-                  src="./img/b043c790-c558-11ee-ab32-a40ff392750d.png"
-                  style="width: 8vw"
+                  src="./img/4.png"
+                  style="width: 8vw; min-width: 150px"
                   class="pb-3"
                 />
               </div>
@@ -338,7 +338,7 @@
                 <span class="h5 fw-lighter">05.</span
                 ><img
                   src="./img/777068_3G001_9864_002_100_0000_Light.avif"
-                  style="width: 10vw"
+                  style="width: 10vw; min-width: 150px"
                   class="pb-3"
                 />
               </div>
