--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
               >
                 <div class="h5 fw-lighter">01.</div>
                 <img
-                  src="./img/gucci-logos-brands-logotypes-2.png"
+                  src="./img/gucci-logo.png"
                   style="width: 8vw; min-width: 150px"
                 />
               </div>
