--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
     <meta name="HandheldFriendly" content="true" />
     <title>Brand - Gucci</title>
     <link rel="stylesheet" href="css/theme.min.css" />
-
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+    />
     <style>
       /* inter-300 - latin */
       @font-face {
@@ -597,7 +600,6 @@
                       </div>
                       <blockquote class="blockquote">
                         <h2>BAGS</h2>
-                        <!-- <p>"That service is really really good. And I don´t say that because they pay me a lot of money. I say that because they don´t pay me more money anymore if I don´t say it..."</p> -->
                       </blockquote>
                       <div
                         class="d-flex justify-content-between border-top pt-3"
@@ -733,16 +735,11 @@
                       </div>
                       <blockquote class="blockquote">
                         <h2>READY-TO-WEAR</h2>
-                        <!-- <p>"Okay, okay, I give it five stars. But do you know what: There is a infinit number of stars out there. So five means nothing."</p> -->
                       </blockquote>
                       <div
                         class="d-flex justify-content-between border-top pt-3"
                       >
-                        <p class="card-text">
-                          <!-- <span class="h6 fw-5">Lizzie Stark</span><br> -->
-                          <!-- <small class="text-muted">Head of Security, Brummagem Boys</small> -->
-                        </p>
-                        <!-- <img src="img/webp/person18.webp" width="48" height="48" class="rounded-circle" alt="" data-aos="fade"> -->
+                        <p class="card-text"></p>
                       </div>
                     </div>
                   </div>
@@ -759,26 +756,11 @@
             <div class="col-md-6 col-lg-4 border-end" data-aos="fade-up">
               <div class="d-flex">
                 <div class="col-md-3 flex-fill pt-3 pe-3 pe-md-0">
-                  <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="42"
-                    height="42"
-                    fill="currentColor"
-                    class="bi bi-box-seam"
-                    viewbox="0 0 16 16"
-                  >
-                    <path
-                      d="M8.186 1.113a.5.5 0 0 0-.372 0L1.846 3.5l2.404.961L10.404 2l-2.218-.887zm3.564 1.426L5.596 5 8 5.961 14.154 3.5l-2.404-.961zm3.25 1.7-6.5 2.6v7.922l6.5-2.6V4.24zM7.5 14.762V6.838L1 4.239v7.923l6.5 2.6zM7.443.184a1.5 1.5 0 0 1 1.114 0l7.129 2.852A.5.5 0 0 1 16 3.5v8.662a1 1 0 0 1-.629.928l-7.185 2.874a.5.5 0 0 1-.372 0L.63 13.09a1 1 0 0 1-.63-.928V3.5a.5.5 0 0 1 .314-.464L7.443.184z"
-                    />
-                  </svg>
+                  <i class="fa-solid fa-wave-square fa-2xl"></i>
                 </div>
                 <div class="col-md-9 flex-fill">
-                  <h3 class="h5 my-2">Delivery Service</h3>
-                  <p>
-                    If we had any physical goods we would deliver them to your
-                    door steps. Of course in time and to the right adress. But
-                    we have no products...
-                  </p>
+                  <h3 class="h5 my-2">TOP 10</h3>
+                  <p></p>
                 </div>
               </div>
             </div>
@@ -789,29 +771,11 @@
             >
               <div class="d-flex">
                 <div class="col-md-3 flex-fill pt-3 pt-3 pe-3 pe-md-0">
-                  <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="42"
-                    height="42"
-                    fill="currentColor"
-                    class="bi bi-card-checklist"
-                    viewbox="0 0 16 16"
-                  >
-                    <path
-                      d="M14.5 3a.5.5 0 0 1 .5.5v9a.5.5 0 0 1-.5.5h-13a.5.5 0 0 1-.5-.5v-9a.5.5 0 0 1 .5-.5h13zm-13-1A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h13a1.5 1.5 0 0 0 1.5-1.5v-9A1.5 1.5 0 0 0 14.5 2h-13z"
-                    />
-                    <path
-                      d="M7 5.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5zm-1.496-.854a.5.5 0 0 1 0 .708l-1.5 1.5a.5.5 0 0 1-.708 0l-.5-.5a.5.5 0 1 1 .708-.708l.146.147 1.146-1.147a.5.5 0 0 1 .708 0zM7 9.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5zm-1.496-.854a.5.5 0 0 1 0 .708l-1.5 1.5a.5.5 0 0 1-.708 0l-.5-.5a.5.5 0 0 1 .708-.708l.146.147 1.146-1.147a.5.5 0 0 1 .708 0z"
-                    />
-                  </svg>
+                  <i class="fa-solid fa-snowflake fa-2xl"></i>
                 </div>
                 <div class="col-md-9 flex-fill">
-                  <h3 class="h5 my-2">Independently Checked</h3>
-                  <p>
-                    Maybe we would do something to ensure that you get what you
-                    ordered. But you can´t order anything here, so we can give
-                    you a 100% gurantee that anything would be great!
-                  </p>
+                  <h3 class="h5 my-2">WINTER 2024</h3>
+                  <p>simple plus exquisite</p>
                 </div>
               </div>
             </div>
@@ -823,28 +787,29 @@
             >
               <div class="d-flex">
                 <div class="col-md-3 flex-fill pt-3 pt-3 pe-3 pe-md-0">
-                  <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="42"
-                    height="42"
-                    fill="currentColor"
-                    class="bi bi-window-sidebar"
-                    viewbox="0 0 16 16"
-                  >
-                    <path
-                      d="M2.5 4a.5.5 0 1 0 0-1 .5.5 0 0 0 0 1zm2-.5a.5.5 0 1 1-1 0 .5.5 0 0 1 1 0zm1 .5a.5.5 0 1 0 0-1 .5.5 0 0 0 0 1z"
-                    />
-                    <path
-                      d="M2 1a2 2 0 0 0-2 2v10a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V3a2 2 0 0 0-2-2H2zm12 1a1 1 0 0 1 1 1v2H1V3a1 1 0 0 1 1-1h12zM1 13V6h4v8H2a1 1 0 0 1-1-1zm5 1V6h9v7a1 1 0 0 1-1 1H6z"
-                    />
-                  </svg>
+                  <i class="fa-solid fa-rectangle-ad fa-2xl"></i>
                 </div>
                 <div class="col-md-9 flex-fill">
-                  <h3 class="h5 my-2">Online Support</h3>
+                  <h3 class="h5 my-2">NEWS</h3>
                   <p>
-                    Okay, we have this crazy online support form. Fill it out
-                    and the content will be mailed to you as PDF. Print it out.
-                    Than send it via Fax to our super duper hidden Fax number.
+                    Vogue -
+                    <a
+                      href="https://www.vogue.com.tw/article/gucci-2024-fall-ready-to-wear"
+                      style="
+                        text-decoration: none;
+                        border-bottom: 1px solid #333;
+                      "
+                      >Gucci 2024 秋冬解析： Sabato De Sarno
+                      逆勢看漲，夢回黃金年代｜米蘭時裝週</a
+                    >
+                  </p>
+                  <p>
+                    GQ -
+                    <a
+                      href="https://www.gq.com.tw/article/gucci-2024%E7%A7%8B%E5%86%AC%E7%94%B7%E8%A3%9D%E7%A7%80-%E4%BA%AE%E9%BB%9E%E5%9B%9E%E9%A1%A7"
+                      >GUCCI 2024 秋冬男裝秀《GUCCI
+                      ANCORA》精彩亮點回顧，「鏡射手法」巧妙呼應女裝首秀！</a
+                    >
                   </p>
                 </div>
               </div>
@@ -852,7 +817,6 @@
           </div>
         </div>
       </div>
-
       <div
         class="container py-vh-3 border-top"
         data-aos="fade"
@@ -909,88 +873,61 @@
             </address>
           </div>
           <div class="col-12 col-lg-6 col-xl-3 border-end p-5">
-            <h3 class="h6 mb-3">Company</h3>
+            <h3 class="h6 mb-3">Brand Finance</h3>
             <ul class="nav flex-column">
               <li class="nav-item">
-                <a
-                  class="nav-link link-secondary ps-0"
-                  aria-current="page"
-                  href="#"
-                  >Lorem ipsum</a
-                >
-              </li>
-              <li class="nav-item">
-                <a class="nav-link link-secondary ps-0" href="#"
-                  >Dolor sitam est</a
-                >
-              </li>
-              <li class="nav-item">
-                <a class="nav-link link-secondary ps-0" href="#"
-                  >Sed odio cras</a
-                >
-              </li>
-              <li class="nav-item">
-                <a class="nav-link link-secondary ps-0" href="#"
-                  >Commodo tortor ac</a
-                >
+                <p>
+                  <a
+                    class="nav-link link-secondary ps-0"
+                    aria-current="page"
+                    href="https://brandfinance.com/insights/global-500-2023-report-published"
+                    >Global 500 2023 Report Published</a
+                  >
+                </p>
+                <p style="text-align: end">- 18 January 2023</p>
               </li>
             </ul>
           </div>
           <div class="col-12 col-lg-6 col-xl-3 border-end p-5">
-            <h3 class="h6 mb-3">Products</h3>
+            <h3 class="h6 mb-3">Industry</h3>
             <ul class="nav flex-column">
               <li class="nav-item">
                 <a
                   class="nav-link link-secondary ps-0"
                   aria-current="page"
                   href="#"
-                  >Fusce dapibus est</a
+                  >Fashion</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link link-secondary ps-0" href="#"
-                  >Donec sed dui</a
-                >
+                <a class="nav-link link-secondary ps-0" href="#">Car</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link link-secondary ps-0" href="#"
-                  >Tortor mauris</a
-                >
-              </li>
-              <li class="nav-item">
-                <a class="nav-link link-secondary ps-0" href="#"
-                  >Ut fermentum massa</a
-                >
-              </li>
-
-              <li class="nav-item">
-                <a class="nav-link link-secondary ps-0" href="#"
-                  >Magna mollis</a
-                >
+                <a class="nav-link link-secondary ps-0" href="#">3C</a>
               </li>
             </ul>
           </div>
           <div class="col-12 col-lg-6 col-xl-3 p-5">
-            <h3 class="h6 mb-3">Subpages</h3>
+            <h3 class="h6 mb-3">Brand</h3>
             <ul class="nav flex-column">
               <li class="nav-item">
                 <a
                   class="nav-link link-secondary ps-0"
                   aria-current="page"
-                  href="404.html"
-                  >404 System Page</a
+                  href="https://tw.louisvuitton.com/zht-tw/homepage"
+                  >LouisVuitton</a
                 >
                 <a
                   class="nav-link link-secondary ps-0"
                   aria-current="page"
-                  href="register.html"
-                  >Register System Page</a
+                  href="https://www.chanel.com/ca-en/"
+                  >Chanel</a
                 >
                 <a
                   class="nav-link link-secondary ps-0"
                   aria-current="page"
-                  href="content.html"
-                  >Simple Text Content Page</a
+                  href="https://www.hermes.com/us/en/"
+                  >Hermès</a
                 >
               </li>
             </ul>
